--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "Talk is cheap,show me your code please."
 ---
 
 {% for post in paginator.posts %}
